--- a/_examen_3(4).ipynb
+++ b/_examen_3(4).ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# Examen 3\n",
-    "\n"
+    "\n",
+    "Nombre: Raùl Octavio Cornejo Campos\n",
     "\n",
     "### Física Computacional 2023-2\n",
     "\n",
