--- a/_examen_3(4).ipynb
+++ b/_examen_3(4).ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Examen 3\n",
     "\n",
-    "Nombre: Raùl Octavio Cornejo Campos\n",
+    "Nombre: \n",
     "\n",
     "### Física Computacional 2023-2\n",
     "\n",
